apps/test-web/overlays/test/HTTProutes/test-web-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-web-route
  namespace: test
spec:
  parentRefs:
    - name: test-gateway
      namespace: default
      sectionName: http
  hostnames:
    - web.test.home.dblanchet.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-web-svc
          port: 80
